--- a/_posts/2021-11-19-kinds.markdown
+++ b/_posts/2021-11-19-kinds.markdown
@@ -3,9 +3,9 @@ title: "Generics of a higher kind"
 layout: post
 date: 2021-11-19
 tag:
-- higher-kinded types
-- Scala
+- type theory
 - OOPSLA
+- 2008
 star: true
 category: blog
 author: Zilu
